# internal/infrastructure/model/auth_codes.gen.go
@@ -12,13 +12,14 @@ const TableNameAuthCode = "auth_codes"
 
 // AuthCode mapped from table <auth_codes>
 type AuthCode struct {
-	ID        int64     `gorm:"column:id;primaryKey;autoIncrement:true" json:"id"`
-	Value     string    `gorm:"column:value;not null" json:"value"`
-	ClientID  string    `gorm:"column:client_id;not null" json:"client_id"`
-	UserID    int64     `gorm:"column:user_id;not null" json:"user_id"`
-	ExpiresAt time.Time `gorm:"column:expires_at;not null" json:"expires_at"`
-	CreatedAt time.Time `gorm:"column:created_at;not null" json:"created_at"`
-	UpdatedAt time.Time `gorm:"column:updated_at;not null" json:"updated_at"`
+	ID          int64     `gorm:"column:id;primaryKey;autoIncrement:true" json:"id"`
+	Value       string    `gorm:"column:value;not null" json:"value"`
+	ClientID    string    `gorm:"column:client_id;not null" json:"client_id"`
+	UserID      int64     `gorm:"column:user_id;not null" json:"user_id"`
+	RedirectURI string    `gorm:"column:redirect_uri;not null" json:"redirect_uri"`
+	ExpiresAt   time.Time `gorm:"column:expires_at;not null" json:"expires_at"`
+	CreatedAt   time.Time `gorm:"column:created_at;not null" json:"created_at"`
+	UpdatedAt   time.Time `gorm:"column:updated_at;not null" json:"updated_at"`
 }
 
 // TableName AuthCode's table name
