# internal/infrastructure/query/auth_codes.gen.go
@@ -31,6 +31,7 @@ func newAuthCode(db *gorm.DB, opts ...gen.DOOption) authCode {
 	_authCode.Value = field.NewString(tableName, "value")
 	_authCode.ClientID = field.NewString(tableName, "client_id")
 	_authCode.UserID = field.NewInt64(tableName, "user_id")
+	_authCode.RedirectURI = field.NewString(tableName, "redirect_uri")
 	_authCode.ExpiresAt = field.NewTime(tableName, "expires_at")
 	_authCode.CreatedAt = field.NewTime(tableName, "created_at")
 	_authCode.UpdatedAt = field.NewTime(tableName, "updated_at")
@@ -43,14 +44,15 @@ func newAuthCode(db *gorm.DB, opts ...gen.DOOption) authCode {
 type authCode struct {
 	authCodeDo
 
-	ALL       field.Asterisk
-	ID        field.Int64
-	Value     field.String
-	ClientID  field.String
-	UserID    field.Int64
-	ExpiresAt field.Time
-	CreatedAt field.Time
-	UpdatedAt field.Time
+	ALL         field.Asterisk
+	ID          field.Int64
+	Value       field.String
+	ClientID    field.String
+	UserID      field.Int64
+	RedirectURI field.String
+	ExpiresAt   field.Time
+	CreatedAt   field.Time
+	UpdatedAt   field.Time
 
 	fieldMap map[string]field.Expr
 }
@@ -71,6 +73,7 @@ func (a *authCode) updateTableName(table string) *authCode {
 	a.Value = field.NewString(table, "value")
 	a.ClientID = field.NewString(table, "client_id")
 	a.UserID = field.NewInt64(table, "user_id")
+	a.RedirectURI = field.NewString(table, "redirect_uri")
 	a.ExpiresAt = field.NewTime(table, "expires_at")
 	a.CreatedAt = field.NewTime(table, "created_at")
 	a.UpdatedAt = field.NewTime(table, "updated_at")
@@ -90,11 +93,12 @@ func (a *authCode) GetFieldByName(fieldName string) (field.OrderExpr, bool) {
 }
 
 func (a *authCode) fillFieldMap() {
-	a.fieldMap = make(map[string]field.Expr, 7)
+	a.fieldMap = make(map[string]field.Expr, 8)
 	a.fieldMap["id"] = a.ID
 	a.fieldMap["value"] = a.Value
 	a.fieldMap["client_id"] = a.ClientID
 	a.fieldMap["user_id"] = a.UserID
+	a.fieldMap["redirect_uri"] = a.RedirectURI
 	a.fieldMap["expires_at"] = a.ExpiresAt
 	a.fieldMap["created_at"] = a.CreatedAt
 	a.fieldMap["updated_at"] = a.UpdatedAt
